--- a/index.html
+++ b/index.html
@@ -340,10 +340,7 @@
         </div>
 
         <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
-          >
+          &copy; Copyright 2022 - <span id="copyrightYear"></span>. Made by <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com">Ram Maheshwari</a> &nsim; And Updated by <a  target="_blank" href="https://iamvishveshs.github.io/">Vishvesh Shivam</a>.
         </div>
       </div>
     </footer>
