Project files added

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/png/mat.png"
+                src="./assets/jpeg/monthly attendance tracker.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
