--- a/monthly-attendance-tracker.html
+++ b/monthly-attendance-tracker.html
@@ -108,7 +108,7 @@
         <div class="project-details__content">
           <div class="project-details__showcase-img-cont">
             <img
-              src="./assets/png/mat.png"
+              src="./assets/jpeg/monthly attendance tracker.png"
               alt="Project Image"
               class="project-details__showcase-img"
             />
