--- a/monthly-attendance-tracker.html
+++ b/monthly-attendance-tracker.html
@@ -161,12 +161,12 @@
             </div>
             <div class="project-details__links">
               <h3 class="project-details__content-title">See Project</h3>
-              <!-- <a
-                href="#"
+              <a
+                href="http://projects.thevshub.in/ams/"
                 class="btn btn--med btn--theme project-details__links-btn"
                 target="_blank"
                 >Live Link</a
-              > -->
+              >
               <a
                 href="https://github.com/iamvishveshs/-Polytechnic-Monthly-Attendance-tracker.git"
                 class="btn btn--med btn--theme-inv project-details__links-btn"
@@ -186,35 +186,35 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://linkedin.com/in/iamvishveshs">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://github.com/iamvishveshs">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://x.com/imvishveshs">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/twitter-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <!-- <a target="_blank" rel="noreferrer" href="#">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/yt-ico.png"
                   alt="icon"
                 />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              </a> -->
+              <a target="_blank" rel="noreferrer" href="https://instagram.com/iamvishveshs">
                 <img
                   class="main-footer__icon main-footer__icon--mr-none"
                   src="./assets/png/insta-ico.png"
@@ -224,19 +224,15 @@
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
+            <h4 class="heading heading-sm text-lt">Vishvesh Shivam</h4>
             <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
+              Passionate CSE (AIML) Student & Web Developer | Harnessing Tech for Innovation & Growth
             </p>
           </div>
         </div>
 
         <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
-          >
+          &copy; Copyright 2022 - <span id="copyrightYear"></span>. Made by <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com">Ram Maheshwari</a> &nsim; And Updated by <a  target="_blank" href="https://iamvishveshs.github.io/">Vishvesh Shivam</a>.
         </div>
       </div>
     </footer>
