New project added (online admission system)

--- a/index.html
+++ b/index.html
@@ -232,6 +232,33 @@
           </div>
          
         </div>
+
+
+        <div class="projects__content">
+          <div class="projects__row">
+            <div class="projects__row-img-cont">
+              <img
+                src="./assets/jpeg/monthly attendance tracker.png"
+                alt="Software Screenshot"
+                class="projects__row-img"
+                loading="lazy"
+              />
+            </div>
+            <div class="projects__row-content">
+              <h3 class="projects__row-content-title">Online Admission System</h3>
+              <p class="projects__row-content-desc">
+                This project is developed for polytechnic colleges for hassle-free admission process and document organisation.
+              </p>
+              <a
+                href="./online-admission-system.html"
+                class="btn btn--med btn--theme dynamicBgClr"
+                target="_blank"
+                >Case Study</a
+              >
+            </div>
+          </div>
+         
+        </div>
       </div>
     </section>
     <section id="contact" class="contact sec-pad dynamicBg">
