update in project

--- a/online-admission-system.html
+++ b/online-admission-system.html
@@ -117,32 +117,45 @@
             <div class="project-details__desc">
               
               <p class="project-details__desc-para">
-                This project aims to assist polytechnic colleges in efficiently
-                tracking and managing student attendance on a monthly basis. It
-                provides an automated solution to generate attendance reports,
-                ensuring that students' attendance is monitored and necessary
-                actions can be taken for those with low attendance.
+                The Online Admission System is a web-based application designed to streamline and automate the process of student admissions for educational institutions. This project allows administrators to manage the admission process online, making it easier for both students and administrators to handle the entire process efficiently.
               </p>
               <p class="project-details__desc-para">
                 <h3 class="project-details__content-title">Features</h3>
                 <ol>
                   <li>
-                    <p class="project-details__desc-para"><strong>Monthly Attendance Tracking:</strong> Keeps a record of student attendance for each month.</p>
+                    <p class="project-details__desc-para"><strong>User Registration & Authentication:</strong> <ul>
+                      <li>Students can register and create their profiles.</li>
+                      <li>Secure login and authentication system for students and administrators.</li>
+                    </ul></p>
                   </li>
                   <li>
-                    <p class="project-details__desc-para"><strong>Report Generation:</strong> Generates attendance reports in PDF format for easy sharing and printing.</p>
-                  </li>
-                  <li>
-                    <p class="project-details__desc-para"><strong>Highlighting Low Attendance:</strong>Students with attendance below 75% are automatically highlighted in the report, making it easy to identify those who may need intervention.</p>
-                  </li>
-                  <li>
-                    <p class="project-details__desc-para"><strong> Divided Attendance Sections:</strong><br/>
-                      Attendance is categorized into two sections:
-                    <ul>
-                      <li><p class="project-details__desc-para"><strong>Theory:</strong>Tracks attendance for theoretical classes.</p></li>
-                      <li><p class="project-details__desc-para"><strong>Practical:</strong>Tracks attendance for practical/laboratory sessions.</p></li>
-                    </ul>
+                    <p class="project-details__desc-para"><strong>Application Submission:</strong>
+                      <ul>
+                        <li>Students can fill out application forms online.</li>
+                        <li>Upload necessary documents directly to the platform.</li>
+                      </ul> 
                     </p>
+                  </li>
+                  <li>
+                    <p class="project-details__desc-para"><strong>Application Tracking:</strong>
+                      <ul>
+                      <li>Students can track the status of their applications in real time.</li>
+                    </ul> 
+                  </p>
+                  </li>
+                  <li>
+                    <p class="project-details__desc-para"><strong>Admin Dashboard:</strong><ul>
+                      <li>View and manage all submitted applications.</li>
+                      <li>Generate reports and statistics on admissions.</li>
+                    </ul> 
+                    </p>
+                  </li>
+                  <li>
+                    <p class="project-details__desc-para"><strong>Responsive Design:</strong>
+                      <ul>
+                      <li>Fully responsive design ensuring usability across all devices (desktops, tablets, mobile phones).</li>
+                    </ul> 
+                  </p>
                   </li>
                 </ol>  
                       
