--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/monthly attendance tracker.png"
+                src="./assets/png/oas.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
