Major update in Portfolio
Added contact form and other bug improvements.

--- a/griham.html
+++ b/griham.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Case Study of Monthly attendance tracker</title>
+    <title>Case Study of Griham</title>
     <meta name="description" content="Case study page of Project" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -108,7 +108,7 @@
     <div class="project-details__content">
       <div class="project-details__showcase-img-cont">
         <img
-          src="./assets/jpeg/griham-homepage.png"
+          src="./assets/png/griham-cover.png"
           alt="Griham Project Image"
           class="project-details__showcase-img"
         />
@@ -123,12 +123,17 @@
             <ol>
               <li>
                 <p class="project-details__desc-para">
-                  <strong>User Authentication:</strong> Secure login and registration system for both Admins and Users to manage their profiles and listings.
+                  <strong>Effortless Room Finder:</strong><br>
+                  Verified flats, PGs, and shared homes<br>
+Smart filters: location, room type<br>
+One-click call button for instant contact
                 </p>
               </li>
               <li>
                 <p class="project-details__desc-para">
-                  <strong>Property Listings:</strong> Users can view detailed property descriptions, including amenities, pricing, location, and images.
+                  <strong>Roommate Matching System:</strong><br>
+Filter profiles by gender, lifestyle, and habits<br>
+Criteria: smoking, drinking, pets, food preferences, etc.
                 </p>
               </li>
               <li>
@@ -145,6 +150,11 @@
               <li>
                 <p class="project-details__desc-para">
                   <strong>Admin Dashboard:</strong> A dedicated control panel for administrators to approve listings, manage users, and oversee platform activity.
+                </p>
+              </li>
+              <li>
+                <p class="project-details__desc-para">
+                  <strong>Gmail Email Integration (PHPMailer): </strong> Registration confirmation emails, Password reset via secure Gmail SMTP using app password
                 </p>
               </li>
             </ol>
