--- a/index.html
+++ b/index.html
@@ -87,11 +87,12 @@
         <h1 class="heading-primary">Hey, My name is Vishvesh Shivam</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Passionate CSE (AIML) Student & Web Developer | Harnessing Tech for Innovation & Growth
+            Passionate CSE (AIML) Student & Web Developer | Harnessing Tech for Innovation & Growth<br>
+
           </p>
         </div>
         <div class="home-hero__cta">
-          <a href="./#projects" class="btn btn--bg">Projects</a>
+          <a href="./assets/pdf/Vishvesh_Shivam_Resume_Web.pdf" class="btn btn--bg" download>My Resume</a>
         </div>
       </div>
       <div class="home-hero__socials">
@@ -170,9 +171,11 @@
                 in <strong>CSE [ AIML ]</strong>.
               </p>
               <p class="about__content-details-para">
-                I'm a bit of a digital product junky. Over the years, I've used
-                hundreds of web and mobile apps in different industries and
-                verticals. Feel free to
+                I am a Web Developer with practical experience in building responsive, modern websites and dynamic applications using HTML, CSS, JavaScript, PHP, and MySQL. I enjoy creating clean interfaces, writing structured backend logic, and designing efficient database systems that solve real problems.<br/>
+
+My work includes redesigning the official JNGEC website, developing institutional systems such as an Online Admission System and a Monthly Attendance Tracker, and building custom projects with a focus on clarity, scalability, and user experience. I’m comfortable working independently or collaborating in teams, and I bring a detail-oriented, problem-solving approach to every project.<br/>
+
+I am open to internships, full-time roles, and freelance assignments where I can contribute meaningful solutions, learn continuously, and deliver reliable, high-quality development work.<br/>
                 <strong>contact</strong> me here.
               </p>
             </div>
@@ -182,17 +185,30 @@
           </div>
           <div class="about__content-skills">
             <h3 class="about__content-title">My Skills</h3>
+            <p class="about__content-title" style="font-size:1.5rem">Technical Skills</p>
             <div class="skills">
               <div class="skills__skill">HTML</div>
               <div class="skills__skill">CSS</div>
               <div class="skills__skill">JavaScript</div>
               <div class="skills__skill">PHP</div>
               <div class="skills__skill">MySQL</div>
-              <div class="skills__skill">Bootstrap</div>
 
               <div class="skills__skill">C</div>
               <div class="skills__skill">Python</div>
               <div class="skills__skill">JQuery</div>
+              <div class="skills__skill">AJAX</div>
+            </div>
+            <p class="about__content-title" style="font-size:1.5rem;margin-top:1.5rem">Frameworks</p>
+            <div class="skills">
+              <div class="skills__skill">Bootstrap</div>
+              <div class="skills__skill">Tailwind</div>
+            </div>
+            <p class="about__content-title" style="font-size:1.5rem;margin-top:1.5rem">Tools</p>
+            <div class="skills">
+              <div class="skills__skill">VsCode</div>
+              <div class="skills__skill">PHPMyAdmin</div>
+              <div class="skills__skill">XAMPP</div>
+              <div class="skills__skill">Github</div>
             </div>
           </div>
         </div>
@@ -211,7 +227,7 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/png/griham-homepage.png"
+                src="./assets/png/griham-cover.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
@@ -294,50 +310,55 @@
           <span class="heading-sec__main heading-sec__main--lt">Contact</span>
           <span class="heading-sec__sub heading-sec__sub--lt">
             <p>Feel free to <strong>contact</strong> me here.</p><br>
-            <a href="mailto:iamvishveshs@gmail.com" class="btn btn--med btn--theme dynamicBgClr">Contact</a>
+
           </span>
         </h2>
-        <!-- <div class="contact__form-container">
-          <form action="#" class="contact__form">
-            <div class="contact__form-field">
-              <label class="contact__form-label" for="name">Name</label>
-              <input
-                required
-                placeholder="Enter Your Name"
-                type="text"
-                class="contact__form-input"
-                name="name"
-                id="name"
-              />
-            </div>
-            <div class="contact__form-field">
-              <label class="contact__form-label" for="email">Email</label>
-              <input
-                required
-                placeholder="Enter Your Email"
-                type="text"
-                class="contact__form-input"
-                name="email"
-                id="email"
-              />
-            </div>
-            <div class="contact__form-field">
-              <label class="contact__form-label" for="message">Message</label>
-              <textarea
-                required
-                cols="30"
-                rows="10"
-                class="contact__form-input"
-                placeholder="Enter Your Message"
-                name="message"
-                id="message"
-              ></textarea>
-            </div>
-            <button type="submit" class="btn btn--theme contact__btn">
-              Submit
-            </button>
-          </form>
-        </div> -->
+       <div class="contact__form-container">
+          <form action="https://formsubmit.co/iamvishveshs@gmail.com" method="POST" class="contact__form">
+
+  <input type="hidden" name="_captcha" value="false">
+
+  <input type="hidden" name="_subject" value="New Submission from Portfolio Website!">
+
+  <div class="contact__form-field">
+    <label class="contact__form-label" for="name">Name</label>
+    <input
+      required
+      placeholder="Enter Your Name"
+      type="text"
+      class="contact__form-input"
+      name="name"
+      id="name"
+    />
+  </div>
+  <div class="contact__form-field">
+    <label class="contact__form-label" for="email">Email</label>
+    <input
+      required
+      placeholder="Enter Your Email"
+      type="email"
+      class="contact__form-input"
+      name="email"
+      id="email"
+    />
+  </div>
+  <div class="contact__form-field">
+    <label class="contact__form-label" for="message">Message</label>
+    <textarea
+      required
+      cols="30"
+      rows="10"
+      class="contact__form-input"
+      placeholder="Enter Your Message"
+      name="message"
+      id="message"
+    ></textarea>
+  </div>
+  <button type="submit" class="btn btn--theme contact__btn">
+    Submit
+  </button>
+</form>
+        </div>
       </div>
     </section>
     <footer class="main-footer">
