--- a/index.html
+++ b/index.html
@@ -319,6 +319,7 @@ I am open to internships, full-time roles, and freelance assignments where I can
   <input type="hidden" name="_captcha" value="false">
 
   <input type="hidden" name="_subject" value="New Submission from Portfolio Website!">
+  <input type="hidden" name="_next" value="https://iamvishveshs.github.io/success.html">
 
   <div class="contact__form-field">
     <label class="contact__form-label" for="name">Name</label>
